container for live demo

--- a/index.html
+++ b/index.html
@@ -1,111 +1,5 @@
-<!DOCTYPE html>
-<html>
-<head>
-	<meta http-equiv="Content-Type" name="viewport" content="width=device-width,user-scalable=no" charset="utf-8">
-	<title>PERSONAL SPACE</title>
-	<link rel="stylesheet" href="css/frame.css">
-	<link rel="stylesheet" href="css/pintu.css">
-	<script type="text/javascript" src="./lib/jquery.js"></script>
-	<script type="text/javascript" src="./js/pintu.js"></script>
-	<script type="text/javascript">
-		$(document).ready(function() {
-			//Default Action
-			$(".tab_content").hide();//Hide all content
-			$("ul.tabs li:first").addClass("active").show();//Activate first tab
-			$(".tab_content:first").show();//Show first tab content
-			//On Click Event
-			$("ul.tabs li").click(function() {
-				$("ul.tabs li").removeClass("active");//Remove any "active" class
-				$(this).addClass("active");//Add "active" class to selected tab
-				$(".tab_content").hide();//Hide all tab content
-				var activeTab = $(this).find("a").attr("href");//Find the rel attribute value to identify the active tab + content
-				$(activeTab).fadeIn();//Fade in the active content
-				return false;
-			});
-		});
-	</script>
-</head>
-<body>
-<div class="container">
-	<ul class="tabs">
-		<li><a href="#tab1">个人简介</a></li>
-		<li><a href="#tab2">家乡</a></li>
-		<li><a href="#tab3">经历</a></li>
-		<li><a href="#tab4">技能</a></li>
-		<li onclick="Globe.tabGameClick();"><a href="#tab5">小游戏</a></li>
-	</ul>
-	<div class="tab_container">
-		<div id="tab1" class="tab_content">
-			
-
-		</div>
-		<div id="tab2" class="tab_content">
-			<h2>家乡</h2>
-			<a ><img src="./img/bayugongzhu.jpg" alt="mobile 2G?" /></a>
-			<h3>辽宁 营口开发区</h3>
-			<p>&emsp;&emsp;在渤海湾的东北角，有个营口市，营口市有个现代化新港，名叫鲅鱼圈。</p>
-			<p>&emsp;&emsp;相传很久以前，鲅鱼圈是个小渔村，海岸不是像现在这样的月牙形，而是一条直线。相传一位王子乘船在海上游行时遇到海风翻了船，王子和所有的随从全部掉进海里，就在生命奄奄一息的一刻，美丽善良的鲅鱼公主出现了，救出了王子和他所有的随从。</p>
-			<p>&emsp;&emsp;鲅鱼公主率领所有的鲅鱼托起王子的船，向王子的家乡驶去。王子坐在船上拿起手中笛子，吹着一曲曲优美的旋律，满海的鲅鱼也随着笛声发出有节奏的声音，仿佛在歌唱。鲅鱼公主在海里翩翩起舞，海面、天空、大船、公主、王子形成了一幅美妙绝伦的画面。公主和王子相爱了，王子和公主约定在八月十五那天在海边相聚。</p>
-			<p>&emsp;&emsp;王子回宫后向国王提及与鲅鱼公主的婚事，遭到国王的坚决反对，几翻争执后王子被国王关押起来。</p>
-			<p>&emsp;&emsp;等到八月十五那天，满海的鲅鱼黑压压的出现在海面上，一个个朝着岸上张着圆嘴，非常的兴奋，因为鲅鱼公主就要和王子成亲了，然而，从清晨到夜晚，王子始终都没有出现，鲅鱼公主伤心绝望的留下了眼泪，这时，王子的一个随从出现了，他手中拿着王子的笛子告诉鲅鱼公主事情的真相，原来，王子被国王关押以后，终日思念鲅鱼公主，不言不语，只顾着吹笛子，笛声中满是伤悲之音，最终王子郁郁而终，临死前，王子托他的随从将手中的笛子送给鲅鱼公主。</p>
-			<p>&emsp;&emsp;鲅鱼公主听说整个事情的真相后，悲伤欲绝，她拿起王子的笛子吹了起来，满海的鲅鱼沸腾了，发出一阵一阵排山倒海般的怪叫，仿佛在痛恨国王的狠心与顽固，所有的鲅鱼都在向岸上冲撞，还咯吱咯吱的吞吃海岸线，表示他们对国王的不满，渐渐地海岸被鱼儿们啃去了一大块，形成了一个月牙形的海湾，而鲅鱼公主在那里一刻不停的吹着王子的笛子，鲅鱼公主终于用尽最后一口气力，倒下了……</p>
-			<p>&emsp;&emsp;人们为了纪念鲅鱼公主和王子凄美的爱情，将王子经过的这个地方命名为鲅鱼圈，而被鱼儿啃成月牙形的海湾又叫月牙湾。此后每年的八月十五满海的鲅鱼都会聚集在海面上，发出阵阵怪叫，它们是在怀念鲅鱼公主和王子。</p>
-		</div>
-		<div id="tab3" class="tab_content">
-			<h2>经历</h2>
-			<a ><img src="" alt="mobile 2G?" /></a>
-			<h3><a ></a></h3>
-			<p style="font-weight:bold">项目经历：</p>
-			<p>※2013.4～2014.1 《二维振动铣削动力学建模及仿真分析》的项目研究</p>
-			<p>成果：专利《二维压电振动平台》（2014100728593）；《节能自动草坪浇水车》（2014100729064）；《管道爬行机器人》（2014100727073）已进入实质审查阶段。</p>
-			<p>※2013.7～2014.4《非接触式圆柱滚子直径自动分选机的设计》&emsp;项目来源：大连市经信委</p>
-			<p>成果：完成分选机结构设计中的上料模块设计，通过振动料斗使工件平稳上料。在振动料斗的内部结构设计中，运用缺口剔除法整列机构，使工件在上料过程中把并行的、直径过大的工件剔除，以此提高检测效率。</p>
-			<p>※2014.1～2014.4《二维压电振动信号采集系统》的软件开发</p>
-			<p>成果：运用VS2008及MFC相关知识，开发出windows平台可视化监控软件，实时采集压电设备输出电信号，以用于输出参数的调整和校对</p>
-			<p style="font-weight:bold">社会经历：</p>
-			<p>2011年新浪微博校园推广代理<br/>2013年大连交通大学人事科担任助管<br/>2014年担任校外中学英语辅导班辅导老师</p>
-		</div>
-		<div id="tab4" class="tab_content">
-			<h2>技能</h2>
-			<a ><img src="" alt="mobile 2G?" /></a>
-			<h3><a ></a></h3>
-			<p style="font-weight:bold">专业技能：</p>
-			<p>掌握HTML、JS、CSS、AJAX等技术，熟悉Web相关开发。</p>
-			<p>通过国家计算机二级考试（C语言）。</p>
-			<p>熟练运用Office相关办公软件。</p>
-			<p>掌握Pro/e、CAD、SolidWorks等绘图软件以及MATLAB仿真软件及编程基础。</p>
-			<p style="font-weight:bold">语言证书：</p>
-			<p>英语六级：听、说、读、写能力较强,能熟练阅读英文文献。</p>
-			<p>日语二级（准）：听、说、读、写能力较强,能熟练阅读日文文档。</p>
-			<p>国家普通话考试二级甲等等级证书。</p>
-		</div>
-		<div id="tab5" class="tab_content">
-			<div id="pintu_area">
-				<ul>
-					<li id="pos_0"></li>
-					<li id="pos_1"></li>
-					<li id="pos_2"></li>
-				</ul>
-				<ul>
-					<li id="pos_3"></li>
-					<li id="pos_4"></li>
-					<li id="pos_5"></li>
-				</ul>
-				<ul>
-					<li id="pos_6"></li>
-					<li id="pos_7"></li>
-					<li id="pos_8"></li>
-				</ul>
-				<ul id="footer">
-					<li>&nbsp;&nbsp;&nbsp;TIME: <span id="time">0</span> S</li>
-					<li><img id="btn_play" src="./img/play.png"></li>
-					<li>
-						<img style="margin:20px 20px" src="./img/pinTu.gif" width="190px" height="190px">
-					</li>
-				</ul>
-			</div>
-		</div>
-	</div>
-</div>
-</body>
-</html>
+<script>
+	window.onload = function() {
+		window.location.href = "./plugin/hotArea/demo.html";
+	}
+</script>
