--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <script>
 	window.onload = function() {
-		window.location.href = "./plugin/hotArea/index.html";
+		window.location.href = "./plugin/hotArea/demo_1217.html";
 	}
 </script>
